--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -1,4 +1,4 @@
 <p>courses works!</p>
 
 <app-button [buttonText]="'Open Modal'"></app-button>
-<app-modal></app-modal>
+<app-modal [message]="'Message Text'"></app-modal>
