--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<header>
+  <img src="{{ logoPath }}" alt="{{ logoAlt }}">
+  <div>
+    <ng-content></ng-content>
+  </div>
+</header>
