--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
 <button (click)="onClick($event)">
-  <i class="`fa-solid fa-{{ iconName }}`"></i> {{ buttonText }}<i class="fa-solid fa-xmark"></i>
+  <fa-icon [icon]="[iconPrefix, iconName]"></fa-icon>{{ buttonText }}
 </button>
