--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -1,5 +1,3 @@
-//Should have hover, focus and active styles.
-
 button {
   padding: 13px 32px;
   margin: 0;
@@ -11,6 +9,8 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
