--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -1,1 +1,9 @@
-<p>info works!</p>
+<div class="info-wrapper">
+  <div class="info-panel">
+    <h3>{{title}}</h3>
+    <div *ngIf="text">{{text}}</div>
+    <div>
+      <ng-content></ng-content>
+    </div>
+  </div>
+</div>
