ccousers card, list updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header>
   Harry Potter
-  <app-button [buttonText]="'Logout'" [iconName]="'circle'"></app-button>
+  <app-button [buttonText]="'Logout'"></app-button>
 </app-header>
 
 <div class="content-wrapper">
@@ -8,7 +8,7 @@
   <app-courses></app-courses>
 
   <app-info [title]="'Your List is Empty'" [text]="'Please use \'Add New Course\' button to add your first course'">
-    <app-button [buttonText]="'Add New Course'" [iconName]="'circle'"></app-button>
+    <app-button [buttonText]="'Add New Course'"></app-button>
   </app-info>
 
 </div>
