--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -1,4 +1,3 @@
-<p>courses works!</p>
+<app-course *ngFor="let course of mockedCourseList" [course]="course"></app-course>
 
-<app-button [buttonText]="'Open Modal'"></app-button>
 <app-modal [message]="'Message Text'"></app-modal>
