--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
 <button (click)="onClick($event)">
-  <fa-icon [icon]="[iconPrefix, iconName]"></fa-icon>{{ buttonText }}
+  <fa-icon *ngIf="iconName" [icon]="[iconPrefix, iconName]"></fa-icon>{{ buttonText }}
 </button>
