--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </app-header>
 
 <div class="content-wrapper">
-
+  <app-login></app-login>
   <app-courses></app-courses>
 
   <app-info [title]="'Your List is Empty'" [text]="'Please use \'Add New Course\' button to add your first course'">
