--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="isModalShown" class="modal-shadow">
+<div *ngIf="showModal" class="modal-shadow">
   <div [class]="'modal-wrapper'">
     <div class="modal-header">
       <h4>{{ title }}</h4>
-      <span>
+      <span (click)="closeModal()">
         <i class="fa-solid fa-xmark"></i>
         <fa-icon [icon]="faClose"></fa-icon>
       </span>
@@ -11,8 +11,8 @@
       {{ message }}
     </div>
     <footer>
-      <app-button [buttonText]="okButtonText"></app-button>
-      <app-button [buttonText]="cancelButtonText"></app-button>
+      <app-button [buttonText]="okButtonText" (click)="ok()"></app-button>
+      <app-button [buttonText]="cancelButtonText" (click)="closeModal()"></app-button>
     </footer>
   </div>
 </div>
