--- a/src/app/features/course/course.component.html
+++ b/src/app/features/course/course.component.html
@@ -11,7 +11,7 @@
     <strong>Created:</strong> {{ course.creationDate }}
   </div>
   <div class="card-actions">
-    <app-button [buttonText]="'Show course'"></app-button>
+    <app-button [buttonText]="'Show course'" (buttonClick)="openModal($event)"></app-button>
     <app-button [iconName]="'trash-can'"></app-button>
     <app-button [iconName]="'pencil'" [iconPrefix]="'fas'"></app-button>
   </div>
