--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,3 +23,15 @@ svg#clouds {
   z-index: -10;
   width: 1920px;
 }
+
+nav ul {
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  gap: 15px;
+
+  li {
+    list-style: none;
+  }
+}
