--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,10 +1,15 @@
+:host {
+  display: block;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+}
+
 header {
   max-width: 1440px;
   height: 80px;
   padding: 0 30px 0 37px;
+  margin: 0 auto;
 
   background: #ffffff;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
 
   display: flex;
   justify-content: space-between;
