necessary components created

--- a/src/app/features/courses/courses.component.scss
+++ b/src/app/features/courses/courses.component.scss
@@ -1,5 +1,13 @@
 :host {
   display: block;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.content-wrapper {
+  flex: 1 0 auto;
+  position: relative;
 }
 
 .courses-wrapper {
