--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<!-- <app-login></app-login> -->
+<app-course></app-course>
+<app-login></app-login>
+<app-registration></app-registration>
 
 <app-courses></app-courses>
 
