--- a/src/app/features/course/course.component.html
+++ b/src/app/features/course/course.component.html
@@ -1,18 +1,55 @@
-<div class="card-wrapper">
-  <div class="card-title">
-    {{ course.title }}
-  </div>
-  <div class="card-description">
-    {{ course.description }}
-  </div>
-  <div class="card-data">
-    <strong>Authors:</strong> {{ authors }}<br>
-    <strong>Duration:</strong> {{ course.duration }}<br>
-    <strong>Created:</strong> {{ course.creationDate }}
-  </div>
-  <div class="card-actions">
-    <app-button [buttonText]="'Show course'"></app-button>
-    <app-button [iconName]="'trash-can'"></app-button>
-    <app-button [iconName]="'pencil'" [iconPrefix]="'fas'"></app-button>
+<div class="course-form-wrapper">
+  <div class="course-form">
+    <h3>Course edit/create page</h3>
+    <div class="course-form-content">
+      <h5>Main info</h5>
+      <div class="form-field">
+        <label>Title</label>
+        <input type="text" name="title" placeholder="Input text" />
+        <div class="error-message">Title is required.</div>
+      </div>
+      <div class="form-field invalid">
+        <label>Description</label>
+        <textarea type="text" name="description" placeholder="Input text"></textarea>
+        <div class="error-message">Description is required.</div>
+      </div>
+      <div class="hr"></div>
+      <h5>Authors</h5>
+      <div class="add-panel">
+        <div class="form-field invalid">
+          <label>Author Name</label>
+          <input type="text" name="authorName" placeholder="Input text" />
+          <div class="error-message">Description is required.</div>
+        </div>
+        <app-button [buttonText]="'Create Author'"></app-button>
+      </div>
+      <div class="form-field invalid">
+        <label>Authors List</label>
+        <div class="tag">
+          <div>
+            Author One
+          </div>
+          <fa-icon [icon]="faClose"></fa-icon>
+        </div>
+      </div>
+      <div class="hr"></div>
+      <h5>Duration</h5>
+
+      <div class="add-panel">
+        <div class="form-field invalid">
+          <label>Duration</label>
+          <input type="text" name="duration" placeholder="Input text" />
+          <div class="error-message">Description is required.</div>
+        </div>
+        <div>
+          <strong>00:00</strong> hours
+        </div>
+      </div>
+
+      <div class="course-form-actions">
+        <app-button [buttonText]="'Cancel'"></app-button>
+        <app-button [buttonText]="'Create Course'"></app-button>
+      </div>
+    </div>
   </div>
 </div>
