--- a/src/app/features/courses/courses-list/courses-list.component.html
+++ b/src/app/features/courses/courses-list/courses-list.component.html
@@ -1,3 +1,5 @@
+<app-search></app-search>
+
 <app-course-card *ngFor="let course of courses" [course]="course" [isEditable]="areEditable">
   <app-button [buttonText]="'Show course'" (click)="emitShowCourse()"></app-button>
   <app-button action [iconName]="'trash-can'" (click)="emitDeleteCourse()"></app-button>
