--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -6,11 +6,17 @@
 <div class="content-wrapper">
   <div class="courses-wrapper">
     <app-button (click)="showModal()" [buttonText]="'Open modal'"></app-button>
-    <app-courses-list [courses]="courses" [areEditable]="areCoursesEditable" (showCourseEmitter)="showCourse()"
-      (editCourseEmitter)="editCourse()" (deleteCourseEmitter)="deleteCourse()">
-    </app-courses-list>
 
-    <app-info [title]="'Your List is Empty'" [text]="'Please use \'Add New Course\' button to add your first course'">
+    <app-courses-list *ngIf="courses" [courses]="courses" [areEditable]="areCoursesEditable"
+      (showCourseEmitter)="showCourse()" (editCourseEmitter)="editCourse()" (deleteCourseEmitter)="deleteCourse()">
+      <!-- *ngIf="courses; else addNewCourse" -->
+    </app-courses-list>
+    <!--
+    <ng-template #addNewCourse>
+    </ng-template>
+    -->
+    <app-info *ngIf="!courses" [title]="'Your List is Empty'"
+      [text]="'Please use \'Add New Course\' button to add your first course'">
       <app-button [buttonText]="'Add New Course'"></app-button>
     </app-info>
 
