--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,20 +1,24 @@
 <div class="login-form-wrapper">
   <div class="login-form">
     <h3>Login</h3>
-    <div class="form-field">
-      <label>Email</label>
-      <input type="email" placeholder="Input text" />
-    </div>
-    <div class="form-field">
-      <label>Password</label>
-      <input type="password" />
-    </div>
-    <div class="login-form-submit">
-      <app-button buttonText="Login"></app-button>
-    </div>
-    <div class="login-form-text">
-      If you don't have an account you may<br>
-      <strong>Registration</strong>
+    <div class="login-form-content">
+      <div class="form-field">
+        <label>Email</label>
+        <input type="email" placeholder="Input text" />
+        <div class="error-message">Email is required.</div>
+      </div>
+      <div class="form-field invalid">
+        <label>Password</label>
+        <input type="password" placeholder="Input text" />
+        <div class="error-message">Password is required.</div>
+      </div>
+      <div class="login-form-submit">
+        <app-button buttonText="Login"></app-button>
+      </div>
+      <div class="login-form-text">
+        If you don't have an account you may<br>
+        <strong>Registration</strong>
+      </div>
     </div>
   </div>
 </div>
