--- a/src/app/shared/components/info/info.component.scss
+++ b/src/app/shared/components/info/info.component.scss
@@ -1,3 +1,11 @@
+:host {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 .info-wrapper {
   width: 100%;
   height: 100%;
@@ -14,6 +22,7 @@
     justify-content: space-around;
     align-items: center;
     gap: 24px;
+
     & > div:last-child {
       padding-top: 16px;
     }
