--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,13 @@
 @import "~normalize.css";
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: "Open Sans";
+  background: #f7f7f7;
   font-size: 16px;
   line-height: 20px;
   color: #333e48;
@@ -29,7 +35,15 @@ h4 {
   font-size: 24px;
   line-height: 32px;
   text-transform: capitalize;
-  color: #000000;
+  color: #000;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 32px;
+  text-transform: capitalize;
+  color: #000;
 }
 
 button {
