--- a/src/app/features/registration/registration.component.html
+++ b/src/app/features/registration/registration.component.html
@@ -1,28 +1,34 @@
 <div class="login-form-wrapper">
   <div class="login-form">
     <h3>Registration</h3>
-    <div class="login-form-content">
-      <div class="form-field">
-        <label>Name</label>
-        <input type="userName" placeholder="Input text" />
-        <div class="error-message">Name is required.</div>
+    <form #registrationForm="ngForm" (ngSubmit)="onSubmit(registrationForm.value)">
+      <div class="login-form-content">
+        <div class="form-field">
+          <label for="userName">Name</label>
+          <input type="text" placeholder="Input text" name="userName" id="userName" ngModel required minlength="6"
+            [(ngModel)]="model.userName" #userName="ngModel" />
+          <div class="error-message" *ngIf="userName.errors?.['minlength']">Should be > 6 characters.</div>
+          <div class="error-message">Name is required.</div>
+        </div>
+        <div class="form-field">
+          <label for="email">Email</label>
+          <input type="email" placeholder="Input text" name="email" id="email" ngModel required
+            [(ngModel)]="model.email" #email="ngModel" />
+          <div class="error-message">Email is required.</div>
+        </div>
+        <div class="form-field invalid">
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" placeholder="Input text" ngModel required
+            [(ngModel)]="model.password" #email="ngModel" />
+          <div class="error-message">Password is required.</div>
+        </div>
+        <div class="login-form-submit">
+          <app-button buttonText="Login"></app-button>
+        </div>
+        <div class="login-form-text">
+          If you have an account you may <strong>Login</strong>
+        </div>
       </div>
-      <div class="form-field">
-        <label>Email</label>
-        <input type="email" placeholder="Input text" />
-        <div class="error-message">Email is required.</div>
-      </div>
-      <div class="form-field invalid">
-        <label>Password</label>
-        <input type="password" placeholder="Input text" />
-        <div class="error-message">Password is required.</div>
-      </div>
-      <div class="login-form-submit">
-        <app-button buttonText="Login"></app-button>
-      </div>
-      <div class="login-form-text">
-        If you have an account you may <strong>Login</strong>
-      </div>
-    </div>
+    </form>
   </div>
 </div>
