--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div>
-  <input type="text" name="title" placeholder="Input text" />
+  <input type="text" name="title" placeholder="{{searchPlaceholder}}" />
 </div>
 <div>
-  <app-button [buttonText]="'Search'"></app-button>
+  <app-button [buttonText]="'Search'" (click)="searchSubmit('string value')"></app-button>
 </div>
