--- a/src/app/features/forms.scss
+++ b/src/app/features/forms.scss
@@ -38,7 +38,7 @@
     &.ng-invalid:not(.ng-untouched) {
       border-color: #ff0000;
 
-      & + .error-message {
+      & ~ .error-message {
         display: block;
         color: #ff0000;
       }
