--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -5,10 +5,12 @@
       <div class="login-form-content">
         <div class="form-field">
           <label for="email">Email</label>
+
           <input type="email" name="email" id="email" placeholder="Input text" ngModel emailValidator required
             [(ngModel)]="model.email" #email="ngModel" />
-          <div class="error-message">Email is required.</div>
-          <div *ngIf="email.errors?.['emailValidator']">Email is invalid. TEST</div>
+          <div class="error-message">Email is required. <span *ngIf="email.errors?.['emailValidator']">Email is
+              invalid.</span></div>
+
         </div>
         <div class="form-field">
           <label>Password</label>
