--- a/src/app/features/registration/registration.component.html
+++ b/src/app/features/registration/registration.component.html
@@ -1,26 +1,35 @@
 <div class="login-form-wrapper">
   <div class="login-form">
     <h3>Registration</h3>
-    <form #registrationForm="ngForm" (ngSubmit)="onSubmit(registrationForm.value)">
+    <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
       <div class="login-form-content">
+
         <div class="form-field">
           <label for="userName">Name</label>
-          <input type="text" placeholder="Input text" name="userName" id="userName" ngModel required minlength="6"
-            [(ngModel)]="model.userName" #userName="ngModel" />
-          <div class="error-message" *ngIf="userName.errors?.['minlength']">Should be > 6 characters.</div>
-          <div class="error-message">Name is required.</div>
+          <input type="text" placeholder="Input text" name="userName" id="userName" formControlName="userName" />
+          <div *ngIf="(f['userName'].dirty || f['userName'].touched) && f['userName'].errors" class="error-message">
+            <span *ngIf="f['userName'].errors['minlength']">Name must be at least 6 characters.</span>
+            <span *ngIf="f['userName'].errors['required']">Name is required.</span>
+          </div>
         </div>
+
         <div class="form-field">
           <label for="email">Email</label>
           <input type="email" placeholder="Input text" name="email" id="email" ngModel required
-            [(ngModel)]="model.email" #email="ngModel" />
-          <div class="error-message">Email is required.</div>
+            formControlName="email" />
+          <div *ngIf="(f['email'].dirty || f['email'].touched) && f['email'].errors" class="error-message">
+            <span *ngIf="f['email'].errors['required']">Email is required. </span>
+            <span *ngIf="f['email'].errors['emailValidator']">Email is invalid.</span>
+          </div>
         </div>
+
         <div class="form-field invalid">
           <label for="password">Password</label>
           <input type="password" name="password" id="password" placeholder="Input text" ngModel required
-            [(ngModel)]="model.password" #email="ngModel" />
-          <div class="error-message">Password is required.</div>
+            formControlName="password" />
+          <div *ngIf="(f['password'].dirty || f['password'].touched) && f['password'].errors" class="error-message">
+            <span *ngIf="f['password'].errors['required']">Password is required. </span>
+          </div>
         </div>
         <div class="login-form-submit">
           <app-button buttonText="Login"></app-button>
