Homework 4 - routing setup

--- a/src/app/features/course/course.component.html
+++ b/src/app/features/course/course.component.html
@@ -1,3 +1,8 @@
+<app-header>
+  Harry Potter
+  <app-button [buttonText]="'Logout'"></app-button>
+</app-header>
+
 <div class="course-form-wrapper">
   <div class="course-form">
     <h3>Course edit/create page</h3>
