--- a/src/app/features/registration/registration.component.html
+++ b/src/app/features/registration/registration.component.html
@@ -1,3 +1,8 @@
+<app-header>
+  Harry Potter
+  <app-button [buttonText]="'Logout'"></app-button>
+</app-header>
+
 <div class="login-form-wrapper">
   <div class="login-form">
     <h3>Registration</h3>
