--- a/src/app/features/registration/registration.component.scss
+++ b/src/app/features/registration/registration.component.scss
@@ -1,9 +1,23 @@
+:host {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+
+  & > * {
+    &:first-child {
+      flex: 0 0 auto;
+    }
+    &:last-child {
+      flex: 1 0 auto;
+    }
+  }
+}
+
 .login-form-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
 
   .login-form {
     h3 {
