--- a/src/app/features/course/course.component.html
+++ b/src/app/features/course/course.component.html
@@ -11,22 +11,19 @@
       <form [formGroup]="courseForm" (ngSubmit)="onSubmit()">
 
         <div class="form-field">
-          <label for="courseTitle">Title</label>
-          <input type="text" name="courseTitle" id="courseTitle" placeholder="Input text"
-            formControlName="courseTitle" />
-          <div class="error-message"
-            *ngIf="(f['courseTitle'].dirty || f['courseTitle'].touched) && f['courseTitle'].errors">
-            <div *ngIf="f['courseTitle'].errors['required']">Title is required.</div>
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" placeholder="Input text" formControlName="title" />
+          <div class="error-message" *ngIf="(f['title'].dirty || f['title'].touched) && f['title'].errors">
+            <div *ngIf="f['title'].errors['required']">Title is required.</div>
           </div>
         </div>
 
         <div class="form-field">
           <label>Description</label>
-          <textarea type="text" name="description" placeholder="Input text"
-            formControlName="courseDescription"></textarea>
+          <textarea type="text" name="description" placeholder="Input text" formControlName="description"></textarea>
           <div class="error-message"
-            *ngIf="(f['courseDescription'].dirty || f['courseDescription'].touched) && f['courseDescription'].errors">
-            <div *ngIf="f['courseDescription'].errors['required']">Description is required.</div>
+            *ngIf="(f['description'].dirty || f['description'].touched) && f['description'].errors">
+            <div *ngIf="f['description'].errors['required']">Description is required.</div>
           </div>
         </div>
 
@@ -65,8 +62,13 @@
         <div class="add-panel">
           <div class="form-field">
             <label>Duration</label>
-            <input type="text" name="duration" placeholder="Input text" formControlName="courseDuration" />
-            <div class="error-message">Description is required.</div>
+            <input type="number" name="duration" placeholder="Input text" formControlName="duration" />
+
+            <div class="error-message"
+              *ngIf="(f['duration'].dirty || f['duration'].touched || onSubmit) && f['duration'].errors">
+              <div *ngIf="f['duration'].errors['required']">Duration is required.</div>
+              <div *ngIf="f['duration'].errors['min']">Shoud be > 0.</div>
+            </div>
           </div>
           <div>
             <strong>00:00</strong> hours
@@ -75,7 +77,7 @@
 
         <div class="course-form-actions">
           <app-button [buttonText]="'Cancel'"></app-button>
-          <app-button [buttonText]="'Create Course'"></app-button>
+          <app-button type="submit" [buttonText]="'Create Course'"></app-button>
         </div>
       </form>
     </div>
